WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
262159
[PointerEvents] pressure property is not spec-compliant when constructed from mouse event
https://bugs.webkit.org/show_bug.cgi?id=262159
Summary
[PointerEvents] pressure property is not spec-compliant when constructed from...
Abrar Rahman Protyasha
Reported
2023-09-26 18:33:44 PDT
As of ToT, every PointerEvent object created from a backing MouseEvent object in PointerCaptureController has an incorrect pressure value, namely 0. This causes us to fail the pointerevents/pointerevent_attributes_hoverable_pointers.html WPT because it makes assertions about the pressure property.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-09-26 18:33:59 PDT
<
rdar://problem/116094696
>
Abrar Rahman Protyasha
Comment 2
2023-09-27 02:22:30 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/18268
EWS
Comment 3
2023-09-27 17:35:55 PDT
Committed
268552@main
(a13dcf305bd1): <
https://commits.webkit.org/268552@main
> Reviewed commits have been landed. Closing PR #18268 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug